[mac-wk1] requestAnimationFrame callbacks may not get serviced https://bugs.webkit.org/show_bug.cgi?id=173628

Reviewed by Simon Fraser.

Source/WebCore:

Page::setIsVisibleInternal() was firing the 'visibilitychange' event
synchronously while in the middle of updating its visibility/activity
state. This allowed the JavaScript to re-enter the method by calling
testRunner.setPageVisibility() / resetPageVisiblity() and we would
end up in an inconsistent state.

No new tests, extended existing test.

* dom/Document.cpp:
(WebCore::Document::visibilityStateChanged):
Do no fire the visibilitychange event synchronously as we are in the
middle of updating the page's activity state. Instead fire the
event asynchronously.

* page/Page.cpp:
(WebCore::Page::setIsVisibleInternal):
Move the calling of Document::visibilityStateChanged() until after we're
done updating the page's visibility state.

* testing/Internals.cpp:
(WebCore::Internals::scriptedAnimationsAreSuspended):
* testing/Internals.h:
* testing/Internals.idl:
Add test infrastructure to check if scripted animations are suspended.

LayoutTests:

Extend layout test coverage.

* fast/events/page-visibility-transition-test-expected.txt:
* fast/events/page-visibility-transition-test.html:


Canonical link: https://commits.webkit.org/190630@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@218747 268f45cc-cd09-0410-ab3c-d52691b4dbfc